# Bachelor_diploma

./: BGV_country_db_lookup.cpp  README.md
fhe_redis/: CMakeLists.txt  fhe_redis.cpp  serializers.cpp  serializers.h
